# sqite3-cmake

./: CMakeLists.txt  main.c
src/: cputime.c  main.c  sqlite3.h  trend.c  vdbesort.c
src/sqlite3_src/: backup.c  opcodes.c  parse.c  sqlite3rbu.c  vdbe.c  vdbesort.c  where.c
tsrc/: config.h  vdbe.c
